Blender Shuts Down when importing a .dae (Collada) file #44648

Closed
opened 2015-05-09 22:56:44 +02:00 by Kaleb Provost · 20 comments

System Information
Windows 8.1 Pro N
ATI Radeon 3100 Graphics (OpenGL 3.3, DirectX 11)

Blender Version
Broken: 2.74
Whenever I try to import a .dae file, Blender stops responding then shuts down.

Exact steps for others to reproduce the error
{F171968}zStgBattleFieldStage.dae

  1. I tried to import a .dae file (StgFinal00stage.dae) through the import section in the file button.
  2. When I pressed import, Blender stopped responding and shut down.
  3. I tried another .dae file (zStgBattleFieldStage.dae) and it still didn't import the file.
  4. I opened Blender with the Command Prompt and I found some interesting output (posted here ).
  5. The output said that it generated a .txt file named blender.crash.txt (which I posted here ).
**System Information** Windows 8.1 Pro N ATI Radeon 3100 Graphics (OpenGL 3.3, DirectX 11) **Blender Version** Broken: 2.74 Whenever I try to import a .dae file, Blender stops responding then shuts down. **Exact steps for others to reproduce the error** {[F171968](https://archive.blender.org/developer/F171968/StgFinal00stage.dae)}[zStgBattleFieldStage.dae](https://archive.blender.org/developer/F171970/zStgBattleFieldStage.dae) 1. I tried to import a .dae file (StgFinal00stage.dae) through the import section in the file button. 2. When I pressed import, Blender stopped responding and shut down. 3. I tried another .dae file (zStgBattleFieldStage.dae) and it still didn't import the file. 4. I opened Blender with the Command Prompt and I found some interesting output (posted [here ](http://pastebin.com/8YSPhP8z)). 5. The output said that it generated a .txt file named blender.crash.txt (which I posted [here ](http://pastebin.com/CxR8H56p)).
Author

Changed status to: 'Open'

Changed status to: 'Open'
Kaleb Provost self-assigned this 2015-05-09 22:56:44 +02:00
Author

Added subscriber: @kprovost7314

Added subscriber: @kprovost7314
Kaleb Provost was unassigned by Aaron Carlisle 2015-05-09 23:39:36 +02:00
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Gaia Clary was assigned by Bastien Montagne 2015-05-10 08:47:09 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Crash confirmed, Gaia, think this one is for you. :)

.dae file seems invalid, but should not crash anyway…

Crash confirmed, Gaia, think this one is for you. :) .dae file seems invalid, but should not crash anyway…

This issue was referenced by 0525db39d1

This issue was referenced by 0525db39d13fbcbf078b8297fbe54387da49a371
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 0525db39d1.

Closed by commit 0525db39d1.
Author

This comment was removed by @kprovost7314

*This comment was removed by @kprovost7314*
Member

@kprovost7314: Have you been able to verify that the fix works for you?

@kprovost7314: Have you been able to verify that the fix works for you?
Author

This comment was removed by @kprovost7314

*This comment was removed by @kprovost7314*
Member

this one: commit 0525db39d1 This commit should be available since a couple of days in the daily blender builds.

this one: commit 0525db39d1 This commit should be available since a couple of days in the daily blender builds.
Author

This comment was removed by @kprovost7314

*This comment was removed by @kprovost7314*

Added subscriber: @sindra1961

Added subscriber: @sindra1961

@kprovost7314:
You should confirm whether you download the daily build version that it was revised, and it was improved.
Download Latest Builds

@kprovost7314: You should confirm whether you download the daily build version that it was revised, and it was improved. [Download Latest Builds ](https://builder.blender.org/download/)
Author

Added subscriber: @GaiaClary

Added subscriber: @GaiaClary
Author

This comment was removed by @kprovost7314

*This comment was removed by @kprovost7314*
Author

This comment was removed by @kprovost7314

*This comment was removed by @kprovost7314*
Member

Yes, the commit will be included in Blender 2.75

i also have tested both files again and they import without crashing blender. However they both report errors on the console. One of the errors looks like a missing feature in the Opencollada libraries. In more detail the opencollada validator reports back:

  Schema validation error: Error: ERROR_TEXTDATA_PARSING_FAILED Element: minfilter, Line: 834, Column: 50, Additional: ¶

and blender can not do much more than reporting this. I took a brief look at the Collada specifications and actually there is no obvious error in the reported line. Also the reported error does not seem to be correct (there is no additional line break in the data). I will talk to the OpenCollada people to decide how we should handle this issue.

However both files can be imported by Blender.

I can not confirm that blender hangs during close. Maybe this happened to you because you have marked a line in the console? In that case the console only closes after the mark has been released (very annoying, but it looks like this is Windows behavior and not related to Blender)

As a sidenote: I wonder if the scaling in the collada files is correct. I found:

  <asset>
      <contributor>
          <authoring_tool>BrawlBox</authoring_tool>
      </contributor>
      <created>2013-11-26T00:40:30Z</created>
      <modified>2013-11-26T00:40:30Z</modified>
      <unit meter="0.01" name="centimeter" />
      <up_axis>Y_UP</up_axis>
  </asset>

It looks to me like the unit should be:

        <unit meter="1.0" name="meter" />

At least it makes more sense when looking at the geometry data.

Yes, the commit will be included in Blender 2.75 i also have tested both files again and they import without crashing blender. However they both report errors on the console. One of the errors looks like a missing feature in the Opencollada libraries. In more detail the opencollada validator reports back: ``` Schema validation error: Error: ERROR_TEXTDATA_PARSING_FAILED Element: minfilter, Line: 834, Column: 50, Additional: ¶ ``` and blender can not do much more than reporting this. I took a brief look at the Collada specifications and actually there is no obvious error in the reported line. Also the reported error does not seem to be correct (there is no additional line break in the data). I will talk to the OpenCollada people to decide how we should handle this issue. However both files can be imported by Blender. I can not confirm that blender hangs during close. Maybe this happened to you because you have marked a line in the console? In that case the console only closes after the mark has been released (very annoying, but it looks like this is Windows behavior and not related to Blender) As a sidenote: I wonder if the scaling in the collada files is correct. I found: ``` <asset> <contributor> <authoring_tool>BrawlBox</authoring_tool> </contributor> <created>2013-11-26T00:40:30Z</created> <modified>2013-11-26T00:40:30Z</modified> <unit meter="0.01" name="centimeter" /> <up_axis>Y_UP</up_axis> </asset> ``` It looks to me like the unit should be: ``` <unit meter="1.0" name="meter" /> ``` At least it makes more sense when looking at the geometry data.
Author

This comment was removed by @kprovost7314

*This comment was removed by @kprovost7314*
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44648
No description provided.