fix T44648: Collada finding bone chains during import crashes when no bones are there